# MyLLaVA

./: .gitignore  README.md  arguments.py  constants.py  conversation.py  finetune.sh  llava.py  llava_trainer.py  main.py  pre_and_fine.sh  pretrain.sh  pyproject.toml  requirements.txt  single.yaml  train.py  train.sh
arguments/: __init__.py  data_arguments.py  model_arguments.py  training_arguments.py
config/: double.yaml
configs/: zero2.json  zero3.json
data_module/: __init__.py  data_collator.py  data_collector.py  dataset.py  image_loader.py
data_module/template/: __init__.py  base_template.py  llama3_template.py  plain_template.py  vicuna_template.py
llavax/: __init__.py  builder.py  constants.py  eval.py  llava_trainer.py  train.py
llavax/arguments/: data_arguments.py  model_arguments.py  training_arguments.py
llavax/data/: __init__.py  data_collator.py  dataset.py  image_loader.py
llavax/data/template/: __init__.py  llama3_strategy.py  plain_strategy.py  template_applier.py  template_strategy.py  vicuna_strategy.py
llavax/data_module/: __init__.py  data_collator.py  dataset.py  image_loader.py
llavax/data_module/template/: __init__.py  (+5 more)
llavax/model/: __init__.py  llava_llama.py  llava_meta.py  vision_factory.py
llavax/train/: __init__.py  train.py  train_factory.py
llavax/vision/: __init__.py  base_module.py
model/: __init__.py  builder.py  llava_llama.py  llava_meta.py
model/mm_adapter/: builder.py
model/vision_tower/: base_tower.py  builder.py  clip_tower.py  multi_tower.py  single_tower.py
vision_tower/: builder.py
(+12 files in other folders)
