[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llavax"
version = "0.1.0"
description = "Reconstruct of LLaVA"
authors = [
    { name="Jinxing Pan", email="anzi20000525@163.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch==2.4.0", "torchvision==0.19.0",
    "transformers==4.43.3", "tokenizers==0.19.1", "accelerate==0.33.0",
    "peft==0.12.0", "bitsandbytes==0.43.3", "numpy==1.26.3",
    "tqdm==4.66.4", "deepspeed==0.14.5", "wandb"
]

[tool.setuptools.packages]
find = {include = ["llavax"]}